@@ -3,6 +3,11 @@ NEWS - OpenPrinting CUPS Filters v1.0.68 - 2015-04-13
 
 CHANGES IN V1.0.69
 
+	- cups-browsed: Determine from the TXT records of the Bonjour broadcast
+	  of an IPP network printer whether it has color and duplex
+	  capabilities and if yes, let auto-generated PPD-less print queues
+	  use appropriate command line options to make use of these
+	  capabilities.
 	- imagetopdf: Make this filter also work with auto-generated PPD-less
 	  print queues for IPP network printers.
 	- sys5ippprinter: Renamed pdftoippprinter to reflect that it is
